--- a/.README.md
+++ b/.README.md
@@ -1,40 +1,35 @@
-// Generate the Readme function
-function generateReadme(answers) {
-    return `
+
     # README.md_Generator
     Using Node.js, generate a template README.md file with users input to generate the README.
-    ${answers.projectTitle}
+    jose
         
     ## Description    
-    ${answers.description}
+    jose
         
     ## Table of Content
-    ${answers.tableOfContents}
+    Project Title
         
     ### Installation
-    ${answers.installation}
+    sjoe
     ### Usage
-    ${answers.usage}
+    jose
     ### Built With
     * [VScode](https://code.visualstudio.com/)
     * [Notepad++](https://notepad-plus-plus.org/)
     * [Gitbash](https://gitforwindows.org/)
     ### Questions
-    ${answers.questions}
+    jose
         
-    ### License${answers.license}
+    ### LicenseApache License 2.0
     ### Contributors
-    ${answers.contributing}
+    jose
     ### Acknowledgments
     #### Badges
     [![License](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](https://opensource.org/licenses/Apache-2.0)
         
     ### GitHub Username
-     ${answers.email}
+     my_email@github.com
     ### Avatar Image
-    ${answers.avatar_url}
+    https://avatars3.githubusercontent.com/u/61440109?v=4
     Copyright 2020 &copy;
-    `;
-  }
-  
-  module.exports = generateReadme;
+    
