--- a/.README.md
+++ b/.README.md
@@ -1,35 +1,34 @@
 
-    # README.md_Generator
-    Using Node.js, generate a template README.md file with users input to generate the README.
-    jose
+# README.md_Generator
+Using Node.js, generate a template README.md file with users input to generate the README.
+williams project
         
-    ## Description    
-    jose
+## Description    
+big blue shirt guy
         
-    ## Table of Content
-    Project Title
+## Table of Content
+Project Title,Description,Installation,Usage,License,Contributing,Tests,Questions
         
-    ### Installation
-    sjoe
-    ### Usage
-    jose
-    ### Built With
-    * [VScode](https://code.visualstudio.com/)
-    * [Notepad++](https://notepad-plus-plus.org/)
-    * [Gitbash](https://gitforwindows.org/)
-    ### Questions
-    jose
+### Installation
+each orios
+### Usage
+school
+### Built With
+* [VScode](https://code.visualstudio.com/)
+* [Gitbash](https://gitforwindows.org/)
+### Questions
+go tell mommy
         
-    ### LicenseApache License 2.0
-    ### Contributors
-    jose
-    ### Acknowledgments
-    #### Badges
-    [![License](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](https://opensource.org/licenses/Apache-2.0)
+### LicenseApache License 2.0
+### Contributors
+william
+### Acknowledgments
+#### Badges
+[![License](https://img.shields.io/badge/License-Apache%202.0-blue.svg)](https://opensource.org/licenses/Apache-2.0)
         
-    ### GitHub Username
-     my_email@github.com
-    ### Avatar Image
-    https://avatars3.githubusercontent.com/u/61440109?v=4
-    Copyright 2020 &copy;
+### GitHub Username
+my_email@github.com
+### Avatar Image
+https://avatars3.githubusercontent.com/u/61440109?v=4
+Copyright 2020 &copy;
     
